--- a/GreenSlate.Business/GreenSlate.Business.csproj
+++ b/GreenSlate.Business/GreenSlate.Business.csproj
@@ -91,9 +91,9 @@
     <Compile Include="CacheHelper\GlobalCachingProvider.cs" />
     <Compile Include="Interfaces\IGlobalCachingProvider.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
-    <Compile Include="Interfaces\ITodoService.cs" />
+    <Compile Include="Interfaces\ITaskService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\TodoService.cs" />
+    <Compile Include="Services\TaskService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
