--- a/GreenSlate.Web/packages.config
+++ b/GreenSlate.Web/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net472" />
+  <package id="RequireJS" version="2.2.0" targetFramework="net472" />
   <package id="RequireJsNet" version="3.1.0" targetFramework="net472" />
   <package id="Respond" version="1.2.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
